lib/tests/fixtures/compiler/parser/illegal_node_def.baseline
Error: illegal_node_def.pp:3:5: node definitions can only be defined at top-level or inside a class.
  node bar
  ^~~~~~~~
